18910
It's possible to use symbolic type names, then use them in infix position, however this doesn't work for `*`. Maybe there's a good reason for this, but I can't think what it is.

{code}
scala> type +[A, B] = (A, B)
defined type alias $plus

scala> type *[A, B] = (A, B)
defined type alias $times

scala> type X[A, B] = A + B
defined type alias X

scala> type Y[A, B] = A * B
<console>:1: error: ';' expected but identifier found.
       type Y[A, B] = A * B
                        ^
{code}
